test/shared/applications/valid/withDirectoriesWithoutIndex/data/server/domain/sampleContext/sampleAggregate/initialState.js
'use strict';

const { initialState } = require('../../../../base/server/domain/sampleContext/sampleAggregate');

module.exports = initialState;
