test/shared/applications/invalid/withWrongRequire/data/server/domain/sampleContext/sampleAggregate.js
'use strict';

const nonExistent = require('non-existent');

const { initialState, commands, events } = require('../../../base/server/domain/sampleContext/sampleAggregate');

module.exports = { initialState, commands, events };
